--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,29 @@
+############################
+# Maven
+############################
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-.kotlin
 
-### IntelliJ IDEA ###
+############################
+# Archivos compilados
+############################
+*.class
+
+############################
+# IntelliJ IDEA
+############################
+.idea/
+*.iml
+*.iws
+*.ipr
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
-*.iws
-*.iml
-*.ipr
 
-### Eclipse ###
+############################
+# Eclipse
+############################
 .apt_generated
 .classpath
 .factorypath
@@ -22,18 +32,27 @@ target/
 .springBeans
 .sts4-cache
 
-### NetBeans ###
+############################
+# NetBeans
+############################
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
+############################
+# VS Code
+############################
 .vscode/
 
-### Mac OS ###
+############################
+# Kotlin
+############################
+.kotlin
+
+############################
+# Mac OS
+############################
 .DS_Store
